# fglopt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude.md  config.yaml  fglopt  pyproject.toml  requirements.txt
docs/: architecture.md  fea_big_picture.md  fea_plan.md  uml_diagram.md
examples/: cant_beam.stl  demo_bc_visualization.py
src/fglopt/: main.py
src/fglopt/fea/: __init__.py  bc_manager.py  visualization.py
src/fglopt/mesh/: domain_mesh.py
src/fglopt/utils/: config_loader.py
tests/: test_bc_manager.py  test_bc_visualization.py  test_config_loader.py  test_domain_mesh.py  test_main.py
